gateway/k8s.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hermes-gateway
  namespace: hermes
spec:
  selector:
    matchLabels:
      app: hermes-gateway
  replicas: 1
  template:
    metadata:
      labels:
        app: hermes-gateway
    spec:
      containers:
      - name: server
        image: rdkr/hermes-gateway-server:latest
        imagePullPolicy: Always
        env:
          - name: SCHEDULER_HOST
            value: hermes-scheduler.hermes.svc.cluster.local
          - name: DB_HOST
            value: postgres-postgresql.hermes.svc.cluster.local
          - name: DB_PW
            valueFrom:
              secretKeyRef:
                name: postgres-postgresql
                key: postgresql-password
      - name: proxy
        image: envoyproxy/envoy:v1.14-latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
            protocol: TCP
        volumeMounts:
          - readOnly: true
            mountPath: /etc/envoy
            name: hermes-gateway-proxy-config
        command: ["envoy"]
        args: ["-c", "/etc/envoy/envoy.yaml", "-l", "debug"]
      volumes:
        - name: hermes-gateway-proxy-config
          configMap:
            name: hermes-gateway-proxy-config

---
apiVersion: v1
kind: ConfigMap
metadata:
  name: hermes-gateway-proxy-config
  namespace: hermes
data:
  envoy.yaml: |
    admin:
      access_log_path: /tmp/admin_access.log
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }

    static_resources:
      listeners:
      - name: listener_0
        address:
          socket_address: { address: 0.0.0.0, port_value: 8080 }
        filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            config:
              codec_type: auto
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                - name: local_service
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/" }
                    route:
                      cluster: echo_service
                      max_grpc_timeout: 0s
                  cors:
                    allow_origin_string_match:
                    - prefix: "*"
                    allow_methods: GET, PUT, DELETE, POST, OPTIONS
                    allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                    max_age: "1728000"
                    expose_headers: custom-header-1,grpc-status,grpc-message
              http_filters:
              - name: envoy.grpc_web
              - name: envoy.cors
              - name: envoy.router
      clusters:
      - name: echo_service
        connect_timeout: 0.25s
        type: logical_dns
        http2_protocol_options: {}
        lb_policy: round_robin
        hosts: [{ socket_address: { address: 127.0.0.1, port_value: 9090 }}]

---
apiVersion: v1
kind: Service
metadata:
  name: hermes-gateway
  namespace: hermes
spec:
  selector:
    app: hermes-gateway
  ports:
    - protocol: TCP
      port: 8080

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-hermes
  namespace: hermes
  annotations:
    kubernetes.io/ingress.class: nginx
    external-dns.alpha.kubernetes.io/hostname: gateway-hermes.rdkr.uk
spec:
  rules:
  - host: gateway-hermes.rdkr.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: hermes-gateway
          servicePort: 8080
